Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50060

Performance problems with MapPolyine on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Beta
    • None
    • Android Galaxy S4

      Map gestures (pinch, drag) are not working correctly on Android for MapPolylines with realistic number of route points.

      Attached is an example which contains a static route with around 2000 points (which is realistic for routing and track recording). When zooming in so that only parts of the route are visible then everything is ok. Also when the map is zoomed out very far everything works. But when the route matches approximately the viewport then pinch and drag hangs.

      It seems as if some route calculation blocks the gestures.

      On faster desktop systems dragging works but it is not smooth.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            Harald Meyer Harald Meyer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes