MapPolyline performance improvements

Instead of copying the polyline geometry container object
each loop twice in the contains() method the change copies the
geometry only once (implicit sharing limits the copying to the
container itself).

Change-Id: Iee80fa6d49b7e81dea0364b6f9f28a3d2e608d22
Task-number: QTBUG-50060
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>